# code

./: .gitignore  README.md  algorithm.ipynb  async.ipynb  costumer.py  exercise.ipynb  pyproject.toml  requirements.txt  struct.ipynb  test.py  tools.ipynb  worker.py
arq/: job.py  work.py
celery/: job.py
dramatiq/: job.py  work.py
notes/: README.md  learning-roadmap.md
notes/databases/: README.md
notes/databases/nosql/: redis.md
notes/databases/relational/: mysql.md  orm.md  sql.md
notes/interviews/: README.md  other.md  python.md
notes/interviews/backend/: flask.md
notes/interviews/cs/: data-structures-cpp.md  linux.md  network.md  os.md
notes/interviews/python/: 01-basics.md  02-functions-oop.md  03-stdlib-io-regex.md  04-runtime-performance.md  05-exercises.md  99-misc.md
notes/interviews/software/: deployment-selenium.md  design-patterns.md  docs-microservices.md  process-architecture.md
notes/setup/: README.md  fedora.md  windows.md
notes/tutorials/: README.md  automotive-uds.md  devops-workflow.md  networking-services.md  python-core.md  quant-models.md  scraping-automation.md  testing-pytest.md  validation-serialization.md  web-api-apps.md
src/python_notes/: __init__.py
src/python_notes/examples/: README.md  __init__.py
src/python_notes/examples/basic/: README.md  __init__.py
src/python_notes/examples/task_queues/: README.md  __init__.py
src/python_notes/exercises/: README.md  __init__.py
src/python_notes/exercises/assessments/: README.md  __init__.py  classes.ipynb  dicts.ipynb  functions.ipynb  midterm_review_solutions.ipynb  midterm_sol.ipynb  strings.ipynb
src/python_notes/exercises/basics/: README.md  __init__.py
src/python_notes/exercises/data/: README.md  __init__.py  activation.ipynb  countries.ipynb  population.ipynb  titanic.ipynb  trig.ipynb
src/python_notes/exercises/data_analysis/: README.md  __init__.py  matplotlib.ipynb  matplotlib_exercises.ipynb  numpy_solutions.ipynb  pandas_exercises.ipynb  pandas_solutions.ipynb
src/python_notes/exercises/projects/: README.md  __init__.py  five_card_stud_project.ipynb
src/python_notes/exercises/python_foundations/: README.md  __init__.py  dictionary_exercises.ipynb  function_exercises.ipynb  function_solutions.ipynb  functions.ipynb  list_basics_exercises.ipynb  list_solutions.ipynb  strings.ipynb
src/python_notes/resources/: README.md  __init__.py
src/python_notes/resources/datasets/: README.md  __init__.py
src/python_notes/resources/images/: README.md  __init__.py
src/python_notes/resources/references/: __init__.py
src/python_notes/task_queues/: README.md
src/python_notes/task_queues/arq/: __init__.py  client.py
src/python_notes/task_queues/celery/: __init__.py  client.py
src/python_notes/task_queues/dramatiq/: __init__.py  client.py
src/python_notes/tutorials/: README.md  __init__.py
src/python_notes/tutorials/algorithms/: README.md  __init__.py  backtracking.ipynb  combinatorics.ipynb  dp.ipynb  graph.ipynb  greedy.ipynb  leetcode.ipynb  patterns.ipynb  pointers.ipynb  problems.ipynb  search.ipynb  sort.ipynb  topk.ipynb  tree.ipynb  window.ipynb
src/python_notes/tutorials/apps/: README.md  __init__.py  comparison.ipynb  gradio.ipynb  logic.ipynb  streamlit.ipynb  structure.ipynb
src/python_notes/tutorials/automation/: README.md  __init__.py
src/python_notes/tutorials/basics/: README.md  __init__.py  args.ipynb  bases.ipynb  builtins.ipynb  classes.ipynb  collections.ipynb  dicts.ipynb  dirs.ipynb  files.ipynb  functions.ipynb  inheritance.ipynb  init.ipynb  iterators.ipynb  itertools.ipynb  lambda.ipynb  lists.ipynb  methods.ipynb  oop.ipynb  operators.ipynb  returns.ipynb  scope.ipynb  sets.ipynb  special.ipynb  strings.ipynb  types.ipynb  unpack.ipynb
src/python_notes/tutorials/concurrency/: README.md  __init__.py  arq.ipynb  async.ipynb  async_queue.ipynb  barrier.ipynb  celery.ipynb  comparison.ipynb  concurrency.ipynb  condition.ipynb  dask.ipynb  dramatiq.ipynb  event.ipynb  executors.ipynb  local.ipynb  locks.ipynb  manager.ipynb  memory.ipynb  overview.ipynb  pipe.ipynb  pool.ipynb  queue.ipynb  ray.ipynb  semaphore.ipynb  simple_queue.ipynb  taskgroup.ipynb  tasks.ipynb  timer.ipynb
src/python_notes/tutorials/data/: 3d.ipynb  README.md  __init__.py  aggregation.ipynb  axes.ipynb  bars.ipynb  cleaning.ipynb  combine.ipynb  contours.ipynb  creation.ipynb  dataframe.ipynb  errors.ipynb  functions.ipynb  histograms.ipynb  indexing_broadcasting.ipynb  lines.ipynb  merge.ipynb  meshgrid.ipynb  multiindex.ipynb  numpy.ipynb  pandas.ipynb  pie.ipynb  plotting.ipynb  practice.ipynb  scatter.ipynb  series.ipynb  sort.ipynb  subplots.ipynb  transform.ipynb  where.ipynb
src/python_notes/tutorials/data_analysis/: README.md  __init__.py  array_computing_with_numpy.ipynb  data_visualization_with_matplotlib.ipynb  (+4 more)
tests/: test_package_structure.py  test_pydantic.py  test_pydantic_tools.py  test_structure.py
(+67 files in other folders)
