[project]
name = "python-notes"
version = "0.1.0"
description = "Python notes, tutorials, and runnable third-party tool examples."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.18",
    "aiosignal==1.3.2",
    "amqp==5.3.1",
    "appnope==0.1.4",
    "apscheduler==3.11.0",
    "arq==0.26.3",
    "asttokens==3.0.0",
    "async-timeout==5.0.1",
    "attrs==25.3.0",
    "automat==25.4.16",
    "billiard==4.2.1",
    "celery==5.5.2",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1",
    "click-repl==0.3.0",
    "cloudpickle==3.1.1",
    "comm==0.2.2",
    "constantly==23.10.4",
    "cryptography==44.0.2",
    "cssselect==1.3.0",
    "dask==2024.8.0",
    "debugpy==1.8.14",
    "decorator==5.2.1",
    "defusedxml==0.7.1",
    "distributed==2024.8.0",
    "dramatiq==1.17.1",
    "exceptiongroup==1.2.2",
    "executing==2.2.0",
    "filelock==3.18.0",
    "frozenlist==1.6.0",
    "fsspec==2025.3.2",
    "gradio>=6.14.0",
    "greenlet==3.2.1",
    "h11==0.16.0",
    "hiredis==3.1.0",
    "hyperlink==21.0.0",
    "idna==3.10",
    "importlib-metadata==8.6.1",
    "incremental==24.7.2",
    "ipykernel==6.29.5",
    "ipython==8.18.1",
    "ipywidgets==8.1.6",
    "itemadapter==0.11.0",
    "itemloaders==1.3.2",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jmespath==1.0.1",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2025.4.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.7.2",
    "jupyterlab-widgets==3.0.14",
    "kombu==5.5.3",
    "locket==1.0.0",
    "lxml==5.4.0",
    "markupsafe==3.0.2",
    "matplotlib-inline==0.1.7",
    "msgpack==1.1.0",
    "multidict==6.4.3",
    "mysql-connector-python==9.3.0",
    "nest-asyncio==1.6.0",
    "numpy==2.0.2",
    "outcome==1.3.0.post0",
    "packaging==25.0",
    "pandas==2.2.3",
    "parsel==1.10.0",
    "parso==0.8.4",
    "partd==1.4.2",
    "pexpect==4.9.0",
    "platformdirs==4.3.7",
    "prometheus-client==0.21.1",
    "prompt-toolkit==3.0.51",
    "propcache==0.3.1",
    "protego==0.4.0",
    "protobuf==6.30.2",
    "psutil==7.0.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pycparser==2.22",
    "pydispatcher==2.0.7",
    "pygments==2.19.1",
    "pyopenssl==25.0.0",
    "pydantic==2.11.10",
    "pysocks==1.7.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "pyzmq==26.4.0",
    "queuelib==1.8.0",
    "ray==2.44.1",
    "redis==5.2.1",
    "referencing==0.36.2",
    "requests==2.32.3",
    "requests-file==2.1.0",
    "rpds-py==0.24.0",
    "ruff>=0.15.12",
    "scrapy==2.12.0",
    "selenium==4.31.0",
    "service-identity==24.2.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "stack-data==0.6.3",
    "streamlit>=1.57.0",
    "tblib==3.1.0",
    "tldextract==5.3.0",
    "tomli==2.2.1",
    "toolz==1.0.0",
    "tornado==6.4.2",
    "traitlets==5.14.3",
    "trio==0.30.0",
    "trio-websocket==0.12.2",
    "twisted==24.11.0",
    "typing-extensions==4.13.2",
    "tzdata==2025.2",
    "tzlocal==5.3.1",
    "urllib3==2.4.0",
    "vine==5.1.0",
    "w3lib==2.3.1",
    "wcwidth==0.2.13",
    "websocket-client==1.8.0",
    "widgetsnbextension==4.0.14",
    "wsproto==1.2.0",
    "yarl==1.20.0",
    "zict==3.0.0",
    "zipp==3.21.0",
    "zope-event==5.0",
    "zope-interface==7.2",
    "matplotlib>=3.10.9",
    "scipy>=1.17.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/python_notes"]

[tool.ruff]
target-version = "py312"
extend-exclude = [
    "src/python_notes/tutorials/**/*.ipynb",
    "src/python_notes/exercises/**/*.ipynb",
]
