[project]
name = "python-notes"
version = "0.1.0"
description = "Python notes, tutorials, and runnable third-party tool examples."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11",
    "apscheduler>=3.11",
    "arq>=0.28",
    "celery[redis]>=5.6",
    "dask[distributed]>=2024.8",
    "dramatiq[redis]>=2.2",
    "gradio>=6.14",
    "ipykernel>=6.29",
    "ipython>=8.18",
    "ipywidgets>=8.1",
    "matplotlib>=3.10",
    "numpy>=2.0",
    "pandas>=2.2",
    "playwright>=1.55",
    "pydantic>=2.11",
    "ray>=2.44",
    "ruff>=0.15",
    "scikit-learn>=1.8",
    "streamlit>=1.57",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/python_notes"]

[tool.ruff]
target-version = "py312"
extend-exclude = [
    "src/python_notes/tutorials/**/*.ipynb",
    "src/python_notes/exercises/**/*.ipynb",
]
